# hickory-dns

./: Cargo.toml  README.md
crates/resolver/: Cargo.toml
crates/resolver/src/system_conf/: unix.rs
