[workspace]
members = [
    "crates/proto",
    "crates/resolver",
    "crates/recursor",
    "crates/client",
    "crates/server",
    "crates/async-std-resolver",
    "bin",
    "util",
    "tests/compatibility-tests",
    "tests/integration-tests",
]

exclude = ["fuzz"]

[workspace.package]
version = "0.23.1"
authors = ["The contributors to Trust-DNS"]
edition = "2021"
rust-version = "1.64.0"
homepage = "https://trust-dns.org/"
repository = "https://github.com/bluejekyll/trust-dns"
keywords = ["DNS", "BIND", "dig", "named", "dnssec"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]
# trustdns
trust-dns-client = { version = "0.23.1", path = "crates/client", default-features = false }
trust-dns-recursor = { version = "0.23.1", path = "crates/recursor", default-features = false }
trust-dns-resolver = { version = "0.23.1", path = "crates/resolver", default-features = false }
trust-dns-server = { version = "0.23.1", path = "crates/server", default-features = false }
trust-dns-proto = { version = "0.23.1", path = "crates/proto", default-features = false }


# logging
tracing = "0.1.30"
tracing-subscriber = "0.3"
thiserror = "1.0.20"


# async/await
async-recursion = "1.0.0"
async-trait = "0.1.43"
futures = { version = "0.3.5", default-features = false }
futures-channel = { version = "0.3.5", default-features = false }
futures-executor = { version = "0.3.5", default-features = false }
futures-io = { version = "0.3.5", default-features = false }
futures-util = { version = "0.3.5", default-features = false }
async-std = "1.6"
# tokio = "1.21"
tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "epoll", features = [
    "full",
] }
tokio-native-tls = "0.3.0"
tokio-openssl = "0.6.0"
# tokio-rustls = "0.24.0"
# tokio-rustls = "0.24.0"
tokio-rustls = { git = "https://github.com/wasix-org/tokio-rustls.git", version = "=0.24.1" }
parking_lot = { version = "0.12", git = "https://github.com/wasix-org/parking_lot.git" }


# ssl
native-tls = "0.2"
openssl = "0.10.55"
rustls = { version = "0.21.5", branch = "v0.21.5", git = "https://github.com/wasix-org/rustls.git" }
rustls-pemfile = "1.0.0"
webpki = { git = "https://github.com/wasix-org/webpki.git", branch = "v0.101.0", version = "0.101.0", package = "rustls-webpki" }
webpki-roots = { git = "https://github.com/wasix-org/webpki-roots.git", version = "0.24.0", branch = "v0.24.0" }
ring = { version = "0.16.20", git = "https://github.com/wasix-org/ring.git", branch = "wasix" }


# net proto
quinn = { version = "0.10", default-features = false }
h2 = { version = "=0.3.20", git = "https://github.com/wasix-org/h2.git" }
http = "0.2"


# others
backtrace = "0.3.50"
bytes = "1"
cfg-if = "1"
clap = { version = "4.0", default-features = false }
console = "0.15.0"
data-encoding = "2.2.0"
drain = "0.1.1"
enum-as-inner = "0.6"
idna = "0.4.0"
ipconfig = "0.3.0"
ipnet = "2.3.0"
js-sys = "0.3.44"
once_cell = "1.18.0"
lru-cache = "0.1.2"
pin-utils = "0.1.0"
radix_trie = "0.2.0"
rand = "0.8"
regex = "1.3.4"
resolv-conf = "0.7.0"
rusqlite = "0.29.0"
serde = "1.0"
smallvec = "1.6"
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.5" }
# socket2 = "0.5"
time = "0.3"
tinyvec = "1.1.1"
toml = "0.7"
url = "2.4.0"
wasm-bindgen-crate = { version = "0.2.58", package = "wasm-bindgen" }

[patch.crates-io]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
h2 = { version = "=0.3.20", git = "https://github.com/wasix-org/h2.git" }
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.5" }
webpki = { git = "https://github.com/wasix-org/webpki.git", branch = "v0.101.0", version = "0.101.0", package = "rustls-webpki" }
webpki-roots = { git = "https://github.com/wasix-org/webpki-roots.git", version = "0.24.0", branch = "v0.24.0" }
ring = { version = "0.16.20", git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
rustls = { version = "0.21.5", branch = "v0.21.5", git = "https://github.com/wasix-org/rustls.git" }
tokio-rustls = { git = "https://github.com/wasix-org/tokio-rustls.git", version = "=0.24.1" }
parking_lot = { version = "0.12", git = "https://github.com/wasix-org/parking_lot.git" }


# tokio = { path = "../tokio/tokio" }
# mio = { git = "https://github.com/tokio-rs/mio.git" }
# h2 = { git = "https://github.com/hyperium/h2.git" }
